--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </ul>
               </nav>
               <div class="button__header-mob">
-                <a href="" class="button__border">Contact Us</a>
+                <a href="https://www.upwork.com/ag/itsquad/" class="button__border">Contact Us</a>
               </div>
               <div class="header__contact-mob">
                 <div class="contact-mob_tel fw-700">
@@ -176,7 +176,7 @@
                 when you need us for improve your business, <br> then come with us to help your business have reach it, you just sit and feel that goal
               </div>
               <div class="main-block__buttons">
-                <a href="" class="button__primary">Start Project</a>
+                <a href="https://www.upwork.com/ag/itsquad/" class="button__primary">Start Project</a>
               </div>
               <div class="main-block__image">
                 <img src="./img/main-block/main.png" alt="main image">
@@ -228,11 +228,11 @@
                 </div>
                 <div class="our-team__items items-column">
                   <div class="items-column__text">
-                    <div class="first-text p">We are an <span class="Upwork fw-600 p">Upwork</span> agency of Shopify experts. We specialize in a complete cycle development of an eCommerce and dropshipping stores on the Shopify platform.</div>
+                    <div class="first-text p">We are an <a href="https://www.upwork.com/ag/itsquad/" class="Upwork fw-600 p">Upwork</a> agency of Shopify experts. We specialize in a complete cycle development of an eCommerce and dropshipping stores on the Shopify platform.</div>
                     <div class="second-text p">We brought a total income of over <span class="fw-700 p">6 500 000$💰</span> to our clients by developing, customizing and improving their Online Stores, so if you also want to launch your business online - fell free to Contact Us! </div>
                   </div>
                   <div class="item-column__buttons">
-                    <div class="button__primary">Contact Us</div>
+                    <a href="https://www.upwork.com/ag/itsquad/" class="button__primary">Contact Us</a>
                     <div class="button__border">Our Story</div>
                   </div>
                 </div>
@@ -371,13 +371,15 @@
               <div class="header-block_text fw-400 p">all projects that we have already done , proven can help to use more <br> comfortable, then can used by client from our business</div>
             </div>
             <div class="portfolio__items">
-              <div class="swiper">
+              <div class="swiper swiper-default">
                 <div class="swiper-wrapper"> 
                   <div class="portfolio__item item-portfolio swiper-slide">
-                    <div class="item-portfolio__background">
-                        <img src="./img/portfolio/01.png" alt="urban home">
-                      <div class="background__text wf-700 h3">Design Byte App</div>
-                    </div>
+                    <button data-id="first-slide">
+                      <div class="item-portfolio__background">
+                          <img src="./img/portfolio/01.png" alt="urban home">
+                        <div class="background__text wf-700 h3">Design Byte App</div>
+                      </div>
+                    </button>
                   </div>
                   <div class="portfolio__item item-portfolio  item-portfolio_active swiper-slide">
                     <div class="item-portfolio__background">
@@ -401,6 +403,38 @@
               <div class="button__border">See All Portfolio</div>
             </div>
           </div>
+          <div class="portfolio__description-wraper _container _hidden" data-id="first-slide">
+            <div class="portfolio__btn-close">
+              <div class="close-line1"></div>
+              <div class="close-line2"></div>
+            </div>
+            <div class="portfolio__description-items">
+              <div class="swiper swiper-style1">
+                <div class="swiper-wrapper">
+                  <div class="portfolio__description-image swiper-slide">
+                    <img src="./img/portfolio/01.jpg" alt="">
+                  </div>
+                  <div class="portfolio__description-image swiper-slide">
+                    <img src="./img/portfolio/02.jpg" alt="">
+                  </div>
+                  <div class="portfolio__description-image swiper-slide">
+                    <img src="./img/portfolio/01.jpg" alt="">
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+              <div class="portfolio__description-info">
+                <div class="portfolio__description-title fw-700 h2">Beauty Tables</div>
+                <div class="portfolio__description-text p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi id dolore porro nam nemo, omnis a sit architecto aut. Est quisquam voluptatem repudiandae, sequi aliquam quam reiciendis omnis consequuntur?</div>
+                <div class="portfolio__description-subtitle fw-700 p">Data</div>
+                <div class="portfolio__description-text p2">April 2019</div>
+                <div class="portfolio__description-subtitle fw-700 p">Client</div>
+                <div class="portfolio__description-text p2">Beauty Tables</div>
+                <div class="portfolio__description-subtitle fw-700 p">URL</div>
+                <div class="portfolio__description-text p2">https://beautytables.co.uk/</div>
+              </div>
+            </div>
+          </div>
         </section>
         <section class="page__reviews reviews">
           <div class="reviews__container _container">
@@ -409,7 +443,7 @@
               <div class="header-block_title h2 fw-700">People Talk about us</div>
             </div>
             <div class="review__items">
-              <div class="swiper">
+              <div class="swiper swiper-default">
                 <div class="swiper-wrapper">
                     <div class="item-review swiper-slide">
                       <div class="item-review_top">
@@ -481,7 +515,7 @@
                 <div class="header_text p">Help you to reach your business goal</div>
               </div>
               <div class="collaboration__button">
-                <a class="button__primary p3 fw-700">Get Started</a>
+                <a href="https://www.upwork.com/ag/itsquad/" class="button__primary p3 fw-700">Get Started</a>
               </div>
             </div>
             <div class="collaboration_right">
