--- a/index.html
+++ b/index.html
@@ -373,21 +373,21 @@
             <div class="portfolio__items">
               <div class="swiper swiper-default">
                 <div class="swiper-wrapper"> 
-                  <div class="portfolio__item item-portfolio swiper-slide">
-                    <button data-id="first-slide">
+                  <div class="portfolio__item item-portfolio swiper-slide" data-project="vitalgym">
+                    <button>
                       <div class="item-portfolio__background">
                           <img src="./img/portfolio/01.png" alt="urban home">
                         <div class="background__text wf-700 h3">Design Byte App</div>
                       </div>
                     </button>
                   </div>
-                  <div class="portfolio__item item-portfolio  item-portfolio_active swiper-slide">
+                  <div class="portfolio__item item-portfolio  item-portfolio_active swiper-slide" data-project="mybacs">
                     <div class="item-portfolio__background">
                       <img src="./img/portfolio/01.png" alt="urban home">
                       <div class="background__text wf-700 h3">Cloud App</div>                    
                     </div>
                   </div>
-                  <div class="portfolio__item item-portfolio swiper-slide">
+                  <div class="portfolio__item item-portfolio swiper-slide" data-project="beautytables">
                     <div class="item-portfolio__background">
                       <img src="./img/portfolio/03.png" alt="urban home">
                       <div class="background__text wf-700 h3">Design Furniture App</div>
@@ -425,13 +425,13 @@
               </div>
               <div class="portfolio__description-info">
                 <div class="portfolio__description-title fw-700 h2">Beauty Tables</div>
-                <div class="portfolio__description-text p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi id dolore porro nam nemo, omnis a sit architecto aut. Est quisquam voluptatem repudiandae, sequi aliquam quam reiciendis omnis consequuntur?</div>
-                <div class="portfolio__description-subtitle fw-700 p">Data</div>
-                <div class="portfolio__description-text p2">April 2019</div>
-                <div class="portfolio__description-subtitle fw-700 p">Client</div>
-                <div class="portfolio__description-text p2">Beauty Tables</div>
+                <div class="portfolio__description-text p2 portfolio__description-text_info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi id dolore porro nam nemo, omnis a sit architecto aut. Est quisquam voluptatem repudiandae, sequi aliquam quam reiciendis omnis consequuntur?</div>
+                <div class="portfolio__description-subtitle fw-700 p">Date</div>
+                <div class="portfolio__description-text p2 portfolio__description-text_date">April 2019</div>
+                <div class="portfolio__description-subtitle fw-700 p">Technology steck</div>
+                <div class="portfolio__description-text p2 portfolio__description-text_tech">HTML5, SCSS, JavaScript</div>
                 <div class="portfolio__description-subtitle fw-700 p">URL</div>
-                <div class="portfolio__description-text p2">https://beautytables.co.uk/</div>
+                <div class="portfolio__description-text p2 portfolio__description-text_url">https://beautytables.co.uk/</div>
               </div>
             </div>
           </div>
