--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               </div>
             </div>
             <div class="our-services__offers">
-              <div class="offer-items _active" data-id="blue">
+              <a href="#services" class="offer-items _active" data-id="blue">
                 <div class="offer__wrap blue-wrap">
                   <div class="offer_image">
                     <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -385,8 +385,8 @@
                   </div>
                 </div>
                 <h3 class="offer_text fw-700">Shopify Online<br>Store Development</h3>
-              </div>
-              <div class="offer-items" data-id="red">
+              </a>
+              <a href="#services" class="offer-items" data-id="red">
                 <div class="offer__wrap red-wrap">
                   <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_1_59)">
@@ -405,8 +405,8 @@
                   </svg>
                 </div>
                 <h3 class="offer_text fw-700">Website<br>Optimization</h3>
-              </div>
-              <div class="offer-items" data-id="green">
+              </a>
+              <a href="#services" class="offer-items" data-id="green">
                 <div class="offer__wrap wrap-green">
                   <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M21 33.25L33.25 21L38.5 26.25L26.25 38.5L21 33.25Z" stroke="white" stroke-width="3"
@@ -421,8 +421,8 @@
                   </svg>
                 </div>
                 <h3 class="offer_text fw-700">Store Migration</h3>
-              </div>
-              <div class="offer-items" data-id="yellow">
+              </a>
+              <a href="#services" class="offer-items" data-id="yellow">
                 <div class="offer__wrap wrap-yellow">
                   <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -433,7 +433,7 @@
                   </svg>
                 </div>
                 <h3 class="offer_text fw-700">Custom<br>Development</h3>
-              </div>
+              </a>
             </div>
           </div>
         </div>
@@ -520,12 +520,12 @@
             <h2 class="wow animate__rubberBand header-block_title fw-700">People Talk about us</h2>
           </div>
           <div class="review__items">
-            <div class="swiper swiper-default">
+            <div class="swiper swiper-default_rewiews">
               <div class="swiper-wrapper">
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.jpg" alt="profile photo">
+                      <img src="/img/reviews/01.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -543,7 +543,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.jpg" alt="profile photo">
+                      <img src="/img/reviews/01.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -561,7 +561,7 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.jpg" alt="profile photo">
+                      <img src="/img/reviews/01.png" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
@@ -577,9 +577,6 @@
                   </div>
                 </div>
               </div>
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-pagination"></div>
             </div>
           </div>
         </div>
