--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link href="https://upwork-usw2-prod-assets-static.s3.us-west-2.amazonaws.com/org-logo/1582128959346147328?date=1685108683931" rel="icon" type="image/png" sizes="32x32">
   <script src="js/wow.min.js"></script>
   <script>
     new WOW().init();
@@ -209,7 +210,7 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide" data-project="vitalgym">
                       <div>
-                        <img src="./img/main-block/main.png" alt="main image">
+                        <img src="./img/main-block/main1.png" alt="main image">
                       </div>
                   </div>
                   <div class="swiper-slide" data-project="mybacs">
@@ -217,7 +218,7 @@
                       <img src="./img/main-block/quality.jpg" alt="main image">
                     </div>
                   </div>
-                  <div class="swiper-slide" data-project="beautytables">
+                  <div class="swiper-slide" data-project="urbanhome">
                     <div>
                       <img src="./img/main-block/main.png" alt="main image">
 
@@ -270,7 +271,7 @@
           <div class="our-team__body">
             <div class="our-team__column">
               <div class="our-team__video">
-                <img src="./img/ourTeam/mesto-video.jpg" alt="our-team">
+                <img src="./img/ourTeam/placeholder.png" alt="our-team">
               </div>
               <div class="our-team__items items-column">
                 <div class="items-column__text">
@@ -451,32 +452,46 @@
               <div class="swiper-wrapper">
                 <div class="portfolio__item item-portfolio swiper-slide" data-project="vitalgym">
                     <div class="item-portfolio__background">
-                      <img src="./img/portfolio/01.png" alt="urban home">
+                      <img src="./img/portfolio/03.png" alt="urban home">
                       <h3 class="background__text wf-700">Design Byte App</h3>
                     </div>
                 </div>
                 <div class="portfolio__item item-portfolio  item-portfolio_active swiper-slide" data-project="mybacs">
                   <div class="item-portfolio__background">
-                    <img src="./img/portfolio/01.png" alt="urban home">
+                    <img src="./img/portfolio/mybacs.png" alt="urban home">
                     <h3 class="background__text wf-700">Cloud App</h3>
                   </div>
                 </div>
-                <div class="portfolio__item item-portfolio swiper-slide" data-project="beautytables">
+                <div class="portfolio__item item-portfolio swiper-slide" data-project="urbanhome">
                   <div class="item-portfolio__background">
-                    <img src="./img/portfolio/03.png" alt="urban home">
+                    <img src="./img/portfolio/01.png" alt="urban home">
                     <h3 class="background__text wf-700">Design Furniture App</h3>
                   </div>
                 </div>
+                <div class="portfolio__item item-portfolio swiper-slide" data-project="knives">
+                  <div class="item-portfolio__background">
+                    <img src="./img/portfolio/knives.png" alt="urban home">
+                    <h3 class="background__text wf-700">Store Speed Optimization</h3>
+                  </div>
+                </div>
+                <div class="portfolio__item item-portfolio swiper-slide" data-project="printed">
+                  <div class="item-portfolio__background">
+                    <img src="./img/portfolio/printed.png" alt="urban home">
+                    <h3 class="background__text wf-700">Modern UI/UX</h3>
+                  </div>
+                </div>
+            
               </div>
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
           <div class="portfolio__button">
-            <div class="button__border">See All Portfolio</div>
+            <a href="https://www.upwork.com/ag/itsquad" class="button__border">See All Portfolio</a>
           </div>
         </div>
+
+
+
         <div class="portfolio__description-wraper _container _hidden" data-id="first-slide">
           <div class="portfolio__btn-close">
             <div class="close-line1"></div>
@@ -512,6 +527,9 @@
             </div>
           </div>
         </div>
+
+
+
       </section>
       <section class="page__reviews reviews">
         <div class="reviews__container _container">
@@ -525,55 +543,127 @@
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.png" alt="profile photo">
+                      <img src="/img/reviews/02.svg" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
-                        Bogdan Krinichko
+                        Client's feedback
                       </div>
                       <div class="item-review_top__text">
-                        Founder of BRU
+                        Help setting up Shopify website and some CSS
                       </div>
                     </div>
                   </div>
                   <div class="item-review__text p2">
-                    There are many variations passages of Lorem Ipsum majority some by words which don't look .
+                    Great to work with. Very responsive, professional and competent. Will use again.
                   </div>
                 </div>
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.png" alt="profile photo">
+                      <img src="/img/reviews/01.svg" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
-                        Bogdan Krinichko
+                        Client's feedback
                       </div>
                       <div class="item-review_top__text">
-                        Founder of BRU
+                        Shopify custom liquid expert
                       </div>
                     </div>
                   </div>
                   <div class="item-review__text p2">
-                    There are many variations passages of Lorem Ipsum majority some by words which don't look .
+                    "Excellent work and communication, quickly came up with multiple options so we could find the right way to solve my problems 🌟🌟🌟🌟🌟"
                   </div> 
                 </div>
                 <div class="item-review swiper-slide">
                   <div class="item-review_top">
                     <div class="item-review_top__image">
-                      <img src="/img/reviews/01.png" alt="profile photo">
+                      <img src="/img/reviews/02.svg" alt="profile photo">
                     </div>
                     <div class="item-review_top__info">
                       <div class="item-review_top__title fw-600 p">
-                        Bogdan Krinichko
+                        Client's feedback
                       </div>
                       <div class="item-review_top__text">
-                        Founder of BRU
+                        Web development Shopify Store 2.0 to finalise
                       </div>
                     </div>
                   </div>
                   <div class="item-review__text p2">
-                    There are many variations passages of Lorem Ipsum majority some by words which don't look .
+                    "It was a pleasure working with Max. Good communication and worked very efficiently and effortlessly. I highly recommend him and his team. Will work together again in future for sure!"
+                  </div>
+                </div>
+                <div class="item-review swiper-slide">
+                  <div class="item-review_top">
+                    <div class="item-review_top__image">
+                      <img src="/img/reviews/01.svg" alt="profile photo">
+                    </div>
+                    <div class="item-review_top__info">
+                      <div class="item-review_top__title fw-600 p">
+                        Client's feedback
+                      </div>
+                      <div class="item-review_top__text">
+                        Professinal Website designer
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item-review__text p2">
+                    "He is such a nice and hardworking guy , really appreciate the work he did , always available . He is the type guy who doesn't complain a lot , carry on . Great things are ahead . Highly recomended to anyone looking to develop his website . Big UP"
+                  </div>
+                </div>
+                <div class="item-review swiper-slide">
+                  <div class="item-review_top">
+                    <div class="item-review_top__image">
+                      <img src="/img/reviews/02.svg" alt="profile photo">
+                    </div>
+                    <div class="item-review_top__info">
+                      <div class="item-review_top__title fw-600 p">
+                        Client's feedback
+                      </div>
+                      <div class="item-review_top__text">
+                        Bridal Brand Website Optimization
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item-review__text p2">
+                    "Maksym and his team are very professional and knowledgable in what they do. I had a great time working with them. They helped my website a lot, conversions went up and overall customer's experience on a website. I will be working with them again when my other website needs help."
+                  </div>
+                </div>
+                <div class="item-review swiper-slide">
+                  <div class="item-review_top">
+                    <div class="item-review_top__image">
+                      <img src="/img/reviews/01.svg" alt="profile photo">
+                    </div>
+                    <div class="item-review_top__info">
+                      <div class="item-review_top__title fw-600 p">
+                        Client's feedback
+                      </div>
+                      <div class="item-review_top__text">
+                        Migrate my website
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item-review__text p2">
+                    "Knowledgeable, quick, and did a bunch of great detail work. Will likely hire again in the future."
+                  </div>
+                </div>
+                <div class="item-review swiper-slide">
+                  <div class="item-review_top">
+                    <div class="item-review_top__image">
+                      <img src="/img/reviews/02.svg" alt="profile photo">
+                    </div>
+                    <div class="item-review_top__info">
+                      <div class="item-review_top__title fw-600 p">
+                        Client's feedback
+                      </div>
+                      <div class="item-review_top__text">
+                        Shopify Specialist
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item-review__text p2">
+                    "Max was an absolute pleasure to work with. Him and his team went above and beyond to make sure every detail was accounted for and far exceeded my expectations. I couldn't recommend him highly enough. I will 1000% be hiring for my next project."
                   </div>
                 </div>
               </div>
